# my-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  README.md  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py
{{cookiecutter.project_slug}}/tests/ut/: test_increase.py
