{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}
[metadata]
name = {{ cookiecutter.project_slug }}
version = {{ cookiecutter.version }}
author = {{ cookiecutter.full_name.replace('\"', '\\\"') }}
author_email = {{ cookiecutter.email }}
description = {{ cookiecutter.project_short_description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repository_name }}
project_urls =
    Bug Tracker = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repository_name }}/issues
classifiers =
    Programming Language :: Python :: 3
    {%- if cookiecutter.open_source_license in license_classifiers %}
    '{{ license_classifiers[cookiecutter.open_source_license] }}',
    {%- endif %}
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest==7.1
    coverage[toml]==6.3.2
    pytest-cov==3.0.0
    pytest-timeout==2.1.0
style =
    darglint==1.8
    flake8==4.0
    flake8-alphabetize==0.0.17
    isort==5.10.1
    black==22.3
    pydocstyle==6.1.1
    wemake-python-styleguide==0.16
typing =
    mypy>=0.942

# CONFIG

[flake8]
max_line_length = 100
max_local_variables = 9
docstring-convention = google
inline_quotes = "
ignore =
    DAR101
    # Due to issue https://github.com/terrencepreilly/darglint/issues/54
    DAR202
    # This violation will be updated to follow PEP 8 guidelines
    W503

[mypy]
disallow_untyped_calls = True
ignore_missing_imports = True
# `False` -> `__all__` is required in `__init__` files
implicit_reexport = False
warn_return_any = True
disallow_any_generics = True
strict = True
show_error_codes = True
